src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>netsuite_conn__Celigo_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Document_Id__c</fullName>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Handling_Cost__c</fullName>
        <label>Handling Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Quote_Number__c</fullName>
        <label>NetSuite Quote #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Sync_Err__c</fullName>
        <label>NetSuite Sync Error</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__PDF_File__c</fullName>
        <formula>IF( netsuite_conn__Document_Id__c == null , &apos;&apos;, HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; + netsuite_conn__Document_Id__c , Name + &apos;.pdf&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NetSuite PDF File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Push_To_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push To NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Pushed_From_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pushed From NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Sync_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync In Progress</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>